part2/2.7/manifests/logoutput_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: pingpong
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: mobporo/logoutput:2.076
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: pingpong-conf
