part2/2.7/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: pingpong
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: pingpong
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  namespace: pingpong
  name: db-svc
  labels:
    app: db
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: db
